//
//  LoginViewModel.swift
//  GBShopDK
//
//  Created by Denis Kazarin on 23.12.2021.
//

import Foundation
import UIKit

struct LoginViewModel {
    let shopLogo: UIImage = UIImage(named: "GBShopLogo")!
    let loginLabel: String = "Login:"
    let loginTextFieldPlaceholder: String = "Input Login"
    let passwordLabel: String = "Password:"
    let passwordTextFieldPlaceholder: String = "Input Password"
    let loginButtonLabel: String = "Login"
    let registrationButtonLabel: String = "Registration"
    let descriptionAppLabel: String = "Produced by DK"
}
