//
//  MainScreenModel.swift
//  GBShopDK
//
//  Created by Denis Kazarin on 24.12.2021.
//

import Foundation

struct MainScreenModel {
    let wellcomeLabel: String = "Wellcome to our shop"
    let changeDataButtonLabel: String = "Change User Data"
    let logoutButtonLabel: String = "Logout"
    let productsListButtonLabel: String = "Products List"
    let cartButtonLabel: String = "Cart"
}
